@@ -9,10 +9,9 @@ ext {
     // dependencies
     slf4jVersion = "2.0.3"
     junitVersion = "5.9.1"
-    jacksonVersion = "2.13.4"
-    jacksonDatabindVersion = "2.13.4.2"
+
     // details
-    v_version = "1.3.0"
+    v_version = "1.4.0"
     v_groupId = "tech.deplant.java4ever"
     v_artifactId = "java4ever-framework"
     v_repository = "deplant/java4ever-framework"
@@ -34,6 +33,7 @@ dependencies {
     // RUNTIME **************************
 
     api "tech.deplant.java4ever:java4ever-binding:$v_version" // java4ever-binding
+    api "tech.deplant.java4ever:java4ever-utils:1.4.0" // java4ever-binding
     implementation "org.slf4j:slf4j-jdk-platform-logging:$slf4jVersion" // SLF4J Bridge to JDK9 System.Logger
 
     // TESTS **************************
@@ -137,6 +137,7 @@ test {
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += "--enable-preview"
+    options.compilerArgs += "--add-modules=jdk.incubator.concurrent"
 }
 
 tasks.withType(JavaExec).configureEach {
